fix bug alignment navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,8 @@ header {
   background: white;
   font-size: 13px;
   font-family: "Proxima Nova", sans-serif;
+  width: 90%;
+  margin: auto;
 }
 
 .btn-hamb {
@@ -73,7 +75,7 @@ a:hover {
 }
 
 .dropdown-menu {
-  right: 0;
+  right: 6%;
   background-color: black;
   color: white;
 }
